force-app/main/default/objects/Integration_Log__c/fields/Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>Exception_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Details</label>
    <referenceTo>Exception_Log__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>