force-app/main/default/objects/Integration_Log__c/fields/Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Request_Response__c</fullName>
    <label>Request / Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>