force-app/main/default/objects/Integration_Log__c/fields/sObjectId__c.field-meta.xml
<CustomField>
    <fullName>sObjectId__c</fullName>
    <label>sObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>