force-app/main/default/objects/Integration_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Indicates whether this record is for request or a response</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Acknowledgement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>